--- a/Server/package.json
+++ b/Server/package.json
@@ -2,8 +2,22 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "mongoose": "^7.5.3",
     "node": "^20.6.0"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "postman error",
+  "main": "index.js",
+  "devDependencies": {
+    "express": "^4.18.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "postman"
+  ],
+  "author": "dhanush",
+  "license": "ISC"
 }
